deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-main
  labels:
    app: calculator
spec:
  replicas: 3
  selector:
    matchLabels:
      app: calculator
  template:
    metadata:
      labels:
        app: calculator
    spec:
      containers:
        - name: calculator
          image: dimaabc/devops_main:v.1.0.1
          ports:
            - containerPort: 8080
